--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+app.websocket.endpoint=/websocket
+app.websocket.dest-prefix=/app
+app.websocket.broker-prefix=/topic
+app.websocket.topic=/topic/public
