Added message saving capability to MySQL database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
+server.port=8080
+
+#datasource configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/chatapp?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# DDL generation
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+
+logging.level.org.springframework.web=ERROR
+logging.level.com=DEBUG
+
+# Websocket Configuration
 app.websocket.endpoint=/websocket
 app.websocket.dest-prefix=/app
 app.websocket.broker-prefix=/topic
