Added authentication for WebSocket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ app.websocket.endpoint=/websocket
 app.websocket.dest-prefix=/app
 app.websocket.broker-prefix=/topic
 app.websocket.topic=/topic/public
+
+security.basic.enabled=false
